# PathCamp

./: .gitignore  GEMINI.md  LICENSE  README.md  docker-compose.yml  specloom_patch_report.md  test.db  update_tasks.py
.spec/: graph.db
.spec/attachments/: pathcamp_prd.md
.spec/core/protocol/: architecture_agent_prompt.md  implementation_agent_prompt.md  master_agent_system_prompt.md  planner_agent_prompt.md  planner_agent_prompt_baseline.md  requirements_agent_prompt.md  traceability_map.md  verification_agent_prompt.md  workflow.md
.spec/core/templates/: full_sdd.md.j2  (+1 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: crud.py  database.py  dependencies.py  hashing.py  main.py  models.py  schemas.py  token.py
backend/app/routers/: admin.py  auth.py  campaigns.py  timeline.py
backend/app/services/: campaign.py  timeline.py
backend/migrations/: env.py
backend/migrations/versions/: 0304fb21a983_create_campaign_table.py  212bfb58a1cd_create_initial_tables.py  2e98f02c1131_timeline_models.py  be3be1133f1d_timeline_models.py  bfba4fddf3b9_create_users_table.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_authorization.py  test_campaign_api.py  test_campaign_service.py  test_campaigns.py  test_main.py  test_models.py  test_models_timeline.py  test_timeline_api.py  test_timeline_service.py  test_timelines.py
description/: full_sdd.md  full_srs.md
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
(+278 files in other folders)
